--- a/SmartTrashBin/map/templates/map/base_generic.html
+++ b/SmartTrashBin/map/templates/map/base_generic.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 
-  {% block title %}<title>Local Library</title>{% endblock %}
+  {% block title %}<title> Smart Trash Bin </title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -25,9 +25,9 @@
       <div class="col-sm-2">
       {% block sidebar %}
       <ul class="sidebar-nav">
-          <li> <a href="{% url 'course:list' %}"> Course List </a> </li>
-          <li> <a href="">All books</a></li>
-          <li> <a href="">All authors</a></li>
+          <li> <a href=""> Map </a> </li>
+          <li> <a href=""> Predictions </a></li>
+          <li> <a href=""> Estimations </a></li>
       </ul>
      {% endblock %}
       </div>
