Test of google map

--- a/SmartTrashBin/map/templates/map/trash_bin_map.html
+++ b/SmartTrashBin/map/templates/map/trash_bin_map.html
@@ -8,6 +8,6 @@
 
 <div id="trashBinMap" style="width:100%;height:400px;"></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_vwAGVag5R2CN3_uxMk-8rOs6_-L7T8E&callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_vwAGVag5R2CN3_uxMk-8rOs6_-L7T8E&callback=initMap"></script>
 
 {% endblock %}
