--- a/SmartTrashBin/map/templates/map/trash_bin_state.html
+++ b/SmartTrashBin/map/templates/map/trash_bin_state.html
@@ -4,10 +4,11 @@
 
 {% block content %}
 
-<script src="{% static "map/trash_bin_map.js" %}"></script>
+{# Include chart.js library #}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
-<div id="trashBinMap" style="width:100%;height:400px;"></div>
+<canvas id="stateChart" width="100%" height="50%"></canvas>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_vwAGVag5R2CN3_uxMk-8rOs6_-L7T8E&callback=initMap"></script>
+<script src="{% static "map/trash_bin_state_chart.js" %}"></script>
 
 {% endblock %}
