--- a/SmartTrashBin/map/templates/map/trash_bin_map.html
+++ b/SmartTrashBin/map/templates/map/trash_bin_map.html
@@ -8,6 +8,16 @@
 
 <div id="trashBinMap" style="width:100%;height:400px;"></div>
 
+<!-- The following is the content of the pop up when clicking on a trash bin -->
+<div id="infoWindow" style="display:none">
+    <div id="infoWindowContent">
+        <h3> __building__ (__floor__) </h3>
+        <p> Type: __waste__ </p>
+        <progress value="__fullness__" max="100"></progress>
+        <a href="__stateUrl__"> View fullness history </a>
+    </div>
+</div>
+
 <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"> </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_vwAGVag5R2CN3_uxMk-8rOs6_-L7T8E&callback=initMap"></script>
 
