--- a/SmartTrashBin/map/templates/map/trash_bin_map.html
+++ b/SmartTrashBin/map/templates/map/trash_bin_map.html
@@ -14,7 +14,12 @@
         <h3> __building__ (__floor__) </h3>
         <p> Type: __waste__ </p>
         <progress value="__fullness__" max="100"></progress>
-        <a href="__stateUrl__"> View fullness history </a>
+        <p>
+            <a href="__stateUrl__"> View fullness history </a>
+        </p>
+        <p>
+            <a href="__editUrl__"> Edit properties </a>
+        </p>
     </div>
 </div>
 
