--- a/SmartTrashBin/map/templates/base_generic.html
+++ b/SmartTrashBin/map/templates/base_generic.html
@@ -6,15 +6,17 @@
     {% block title %}<title> Smart Trash Bin </title>{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!-- Add additional CSS in static file -->
-    {% comment 'add CSS later' %}
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    {% endcomment %}
+    <!-- CSS librairies -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css">
+
+    <!-- JavaScript librairies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
 </head>
 
 <body style="padding-top: 70px">
@@ -47,8 +49,10 @@
             <div class="col-sm-10 ">
                 {% block content %}{% endblock %}
             </div>
-        </div>
-
+            <div class="col-sm-2 ">
+                {% block buttons %}{% endblock %}
+            </div>
     </div>
+
 </body>
 </html>
