--- a/SmartTrashBin/map/templates/map/trash_bin_state.html
+++ b/SmartTrashBin/map/templates/map/trash_bin_state.html
@@ -14,3 +14,17 @@
 <script src="{% static "map/trash_bin_state_chart.js" %}"></script>
 
 {% endblock %}
+
+{% block buttons %}
+
+<div class="form-group">
+    <div class='input-group date' id='datepicker' data-date="0d" data-date-format="yyyy-mm-dd">
+        <input type='text' class="form-control" placeholder="YYYY-MM-DD"/>
+        <span class="input-group-addon" id='calendarButton'>
+            <span class="fa fa-calendar">
+            </span>
+        </span>
+    </div>
+</div>
+
+{% endblock %}
