Lots of modif to the web app

--- a/SmartTrashBin/map/templates/map/trash_bin_map.html
+++ b/SmartTrashBin/map/templates/map/trash_bin_map.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+<script src="{% static "map/date.js" %}"></script>
 <script src="{% static "map/trash_bin_map.js" %}"></script>
 
 <div id="trashBinMap" style="width:100%;height:400px;"></div>
