--- a/SmartTrashBin/map/templates/map/trash_bin_state.html
+++ b/SmartTrashBin/map/templates/map/trash_bin_state.html
@@ -19,7 +19,7 @@
 
 <div class="form-group">
     <div class='input-group date' id='datepicker' data-date="0d" data-date-format="yyyy-mm-dd">
-        <input type='text' class="form-control" placeholder="YYYY-MM-DD"/>
+        <input type='text' class="form-control"/>
         <span class="input-group-addon" id='calendarButton'>
             <span class="fa fa-calendar">
             </span>
