--- a/SmartTrashBin/map/templates/base_generic.html
+++ b/SmartTrashBin/map/templates/base_generic.html
@@ -17,6 +17,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+
+    <!-- Include date.js library -->
+    {% load static %}
+    <!--<script src="{% static "map/date.js" %}"></script>-->
 </head>
 
 <body style="padding-top: 70px">
